--- a/src/app/home/viewer/settings/settings.component.scss
+++ b/src/app/home/viewer/settings/settings.component.scss
@@ -1,5 +1,5 @@
 form {
-  overflow-y: scroll;
+  overflow-y: visible;
   height: 100%;
 }
 
