--- a/src/app/home/viewer/viewer.component.scss
+++ b/src/app/home/viewer/viewer.component.scss
@@ -1,3 +1,7 @@
 .viewer {
-  overflow: hidden;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
